# CppObjectRecognition

./: .gitignore  CMakeLists.txt  README.md  Readme.md  TestPerformance.cpp  b  r  t  test_performance  test_performance.cpp  v  view_results.sh
Include/: README.md  Readme.md  Utils.hpp
Include/ShapeDetector/: ImageProcessor.h  ImageProcessor.hpp  RectangleDetector.hpp  SphereDetector.hpp
Include/shape_detector/: ImageProcessor.h  RectangleDetector.h
Source/: ImageProcessor.cpp  Main.cpp  Readme.md  RectangleDetector.cpp  SphereDetector.cpp  VisualTest.cpp
Test/: Readme.md  TestAdvancedRectangleDetection.cpp  TestComprehensiveRotation.cpp  TestGeometry.cpp  TestImageProcessor.cpp  TestImageProcessorSpheres.cpp  TestObloidIntegration.cpp  TestPerformance.cpp  TestRectangleDetector.cpp  TestRobustness.cpp  TestRotatedRectangles.cpp  TestSphereDetector.cpp
include/shape_detector/: image_processor.h  rectangle_detector.h
src/: image_processor.cpp  main.cpp  rectangle_detector.cpp
test/: test_geometry.cpp  test_image_processor.cpp  test_rectangle_detector.cpp
